add classes endpoint
