# backend/app/route/course.py
@@ -1,6 +1,6 @@
 from flask import Blueprint
 from flask_restful import Api
-from resource.course import CourseAPI, CourseListAPI,BulletinAPI, BulletinListAPI
+from resource.course import CourseAPI, CourseListAPI, BulletinAPI, BulletinListAPI, ClassesAPI, ClassesListAPI
 
 
 course_blueprint = Blueprint("course_api", __name__)
@@ -19,5 +19,13 @@ course_blueprint_api.add_resource(
 
 course_blueprint_api.add_resource(
     BulletinAPI, "/bulletins/<string:bulletin_id>"
+)
+
+course_blueprint_api.add_resource(
+    ClassesListAPI, "/classes"
+)
+
+course_blueprint_api.add_resource(
+    ClassesAPI, "/classes/<string:classes_id>"
 )
 
